        [Matthew Fuller]

    4 - Increased the number of supported mouse buttons again, having
	just heard of a mouse with 9 possible buttons...
	[Richard Levitte]

    5 - Fix a bug in the warping "next" function, where if there is a
	single window and the cursor is not on it, invoking 'f.warpring
	"next"' does nothing.
	[Martin Blais]

    6 - Introduce a new feature called "SaveWorkspaceFocus", which when
	enabled, makes ctwm remember which window has the focus within
	each virtual workspace. As you switch workspaces, the cursor is
	automatically warped to the window previous in focus in the
	workspace. This significantly reduces the amount of mouse use.
	[Martin Blais]

    7 - From Matthias Kretschmer <kretschm@cs.uni-bonn.de>:
	f.fill patch.
	Without the patch, you might get windows which are increased by
	two times the border width more than it should be.  Additionally
	if you place a window with no/not much size contrainst like
	firefox in the upper left corner and perform f.fill "top" or
	f.fill "left" the size of the window will increase by two times
	the border width in width and height without changing the
	top-left coordinate without the patch.  Of course in such a
	situation the size should not change at all...                 
	[via Olaf Seibert]

    Changes from version 3.8.1 to 3.8.2
    -----------------------------------

    1 - Various code cleanups.
	Cleanup re: raising and warping to windows (previous location of
	pointer in windows), SaveWorkspaceFocus. A few extra NULL
	pointer checks.
	Logical hasfocusvisible cleanup.
	Rename TwmWindow.list to iconmanagerlist, and various smaller
	cleanups.
	Eliminated TwmWindow TwmRoot from struct ScreenInfo. Mostly a
	mechanical change.
	I found some cases where the dummy TwmWindow was apparently
	mistakenly included in a loop. Replaced .next with TwmWindow
	*FirstWindow and .cmaps witn Colormaps RootColormaps. Other
	members were not used.

